# cykooz.heif

./: .dockerignore  .gitignore  CHANGES.md  CHANGES.rst  Cargo.toml  DEV.md  MANIFEST.in  README.md  README.rst  bootstrap.py  build_wheels.sh  make_release.sh  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  version.py
cykooz/: __init__.py
cykooz/heif/: image.py  pil.py  utils.py
docker/: Dockerfile  build.sh
python/cykooz/heif/: pil.py
src/: lib.rs  stream.rs
tests/: test_heif.py
tests/data/: ios18.heic  png_as.heif  zero_sized_exif.heic
