[package]
name = "rust_lib"
version = "0.7.0"
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
homepage = "https://github.com/Cykooz/cykooz.heif"
edition = "2021"


[lib]
name = "rust_lib"
crate-type = ["cdylib"]


[dependencies]
libheif-rs = { version = "1.0.1" }
pyo3 = "0.21"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
