[package]
name = "rust_lib"
version = "0.7.0"
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
homepage = "https://github.com/Cykooz/cykooz.heif"
edition = "2021"


[lib]
name = "rust_lib"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.24.1"


[dependencies.libheif-rs]
version = "2.0"
default-features = false
features = ["v1_18"]


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
