[build-system]
requires = ["maturin>=0.12.15"]
build-backend = "maturin"


[project]
name = "cykooz.heif"
version = "0.13.1"
description = "A decoder of HEIF format of images"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
]
keywords = ["heif", "heic", "libheif", "pil", "pillow"]
requires-python = ">=3.7"


[project.optional-dependencies]
dev = [
    "wheel",
    "maturin",
    "pytest",
    "Pillow",
    "piexif",
]


[tool.maturin]
strip = true


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
