[build-system]
requires = ["maturin>=1.5.1"]
build-backend = "maturin"


[project]
name = "cykooz.heif"
version = "1.2.0"
description = "A decoder of HEIF format of images"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
]
keywords = ["heif", "heic", "libheif", "pil", "pillow"]
requires-python = ">=3.9"


[project.optional-dependencies]
dev = [
    "wheel",
    "maturin[zig]",
    "maturin[zig,patchelf]; platform_system == 'Linux'",
    "pytest",
    "Pillow",
    "piexif",
]


[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "cykooz.heif.rust_lib"
strip = true


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
